# doxygen-breathe-sphinx-readthedocs

./: .gitignore  CMakeLists.txt  Makefile  README.md
doc/: Doxyfile  conf.py  index.rst
doc/api/: stream.rst
include/stream/: stream.hpp
test/: CMakeLists.txt  stream_test.cc
